# PyGCGOpt

./: .flake8  .gitignore  CHANGELOG.html  CHANGELOG.md  INSTALL.html  INSTALL.md  LICENSE  README.html  README.md  genindex.html  index.html  make_release.sh  objects.inv  output.txt  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/actions/setup-pyscipopt-action/: action.yml
.github/actions/setup-scipoptsuite-action/: action.yml
.github/actions/setup-scipoptsuite-actions/: action.yml
.github/workflows/: action.yml  build-package.yml  build_wheels.yml  deploy-documentation.yml  gitlab-mirror.yml  release-production.yml  release-test.yml  release.yml  setup-pyscipopt.yml  setup-scipoptsuite.yml  update-documentation.yml
_sources/: CHANGELOG.md.txt  INSTALL.md.txt  README.md.txt
_sources/api/: index.rst.txt  model.rst.txt
_sources/examples/alldecomps/: alldecomps.ipynb.txt
_static/: pygments.css
api/: classifier.html  decomposition.html  detector.html  detprobdata.html  gcgmodel.html  index.html  model.html  partition.html  pricingsolver.html  score.html
dev/: requirements.txt
docs/: Makefile  conf.py  doxy  index.md  index.rst  installation.rst  maindoc.py  requirements.txt
docs/api/: classifier.rst  decomposition.rst  detector.rst  detprobdata.rst  gcgmodel.rst  index.rst  partition.rst  pricingsolver.rst  score.rst
docs/examples/: index.rst
docs/examples/alldecomps/: alldecomps.ipynb  alldecomps.rst
docs/examples/cpmp/: cpmp.ipynb  cpmp_gcg_example.rst
docs/examples/cpmp/instances/: p550-01.cpmp
examples/: cpmp.py  index.html
examples/alldecomps/: alldecomps.html  alldecomps.ipynb
examples/alldecomps/results/coloring3.lp/: result_coloring3.lp_2021-11-26T130601.jsonl  result_coloring3.lp_2022-02-05T035919.jsonl  result_coloring3.lp_2022-02-05T040212.jsonl  result_coloring3.lp_2022-02-05T040231.jsonl
examples/cpmp/: cpmp.html  cpmp.ipynb  example.py
examples/cpmp/instances/: p550-01.json
src/pygcgopt/: __init__.py  consclassifier.pxi  decomposition.pxi  detector.pxi  detprobdata.pxi  gcg.cpp  gcg.pxd  gcg.pyx  partition.pxi  pricing_solver.pxi  score.pxi  util.py  varclassifier.pxi
tests/: tesr_score.py  test_classifier.py  test_pricing_solver.py  test_score.py
