[build-system]
requires = ['setuptools', 'pyscipopt==6.0.0', 'cython >=3.0.0']
build-backend = "setuptools.build_meta"

[project]
name = "PyGCGOpt"
description = "Python interface and modeling environment for GCG"
authors = [
    {name = "Lehrstuhl für Operations Research - RWTH Aachen University", email = "gcg-bugs@or.rwth-aachen.de"},
]
dependencies = ["pyscipopt"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/SCIP-Interfaces/PyGCGOpt"

[tool.pytest.ini_options]
norecursedirs = ["check"]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "pygcgopt.__version__"}

[tool.cibuildwheel]
skip="pp*" # currently doesn't work with PyPy
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
skip="pp* cp36* cp37* *musllinux*"
before-all = [
    # ensure we have wget and the system libgomp available if possible
    "bash -lc '(apt-get update && apt-get install --yes wget libgomp1 libgfortran5) || (yum install -y wget libgomp libgfortran) || true'",

    # download and unpack SCIP/GCG
    "wget https://github.com/scipopt/scipoptsuite-deploy/releases/download/v0.10.0/libscip-linux.zip -O scip.zip",
    "unzip scip.zip",

    # ensure output folders exist
    "bash -lc 'mkdir -p scip_install/lib || true'",

    # --- PRE-STAGE: copy concrete shared libs into the package's .libs/ BEFORE building ---
    # create package .libs dir (adjust package path if not 'pygcgopt')
    "bash -lc 'mkdir -p /project/pygcgopt/.libs || true'",

    # try to copy the real system libgomp (resolve symlink to actual file)
    "bash -lc 'g=$(ldconfig -p 2>/dev/null | awk \"/libgomp.so.1/ {print \\$4; exit}\"); if [ -n \"$g\" ] && [ -f \"$g\" ]; then cp -v \"$(readlink -f $g)\" /project/pygcgopt/.libs/ || true; fi'",

    # copy any scip_install libs that are needed (libscip, gcg libs) into package .libs
    "bash -lc 'for f in scip_install/lib/*.so*; do [ -f \"$f\" ] && cp -v \"$f\" /project/pygcgopt/.libs/ || true; done'",
    # list what we staged (debug)
    "bash -lc 'echo \"STAGED .libs CONTENTS:\"; ls -l /project/pygcgopt/.libs || true'",
]
environment = {
    PIP_NO_BINARY="pyscipopt",
    SCIPOPTDIR="$(pwd)/scip_install",
    GCGOPTDIR="$(pwd)/scip_install",
    LD_LIBRARY_PATH="$(pwd)/scip_install/lib:$LD_LIBRARY_PATH",
    DYLD_LIBRARY_PATH="$(pwd)/scip_install/lib:$DYLD_LIBRARY_PATH",
    PATH="$(pwd)/scip_install/bin:$PATH",
    PKG_CONFIG_PATH="$(pwd)/scip_install/lib/pkgconfig:$PKG_CONFIG_PATH",
    RELEASE="true"
}

# repair: show deps, repair, and list repaired wheel contents for debugging
repair-wheel-command = [
    "bash -lc 'echo \"-- auditwheel (show) --\"; auditwheel show {wheel} || true'",
    "bash -lc 'auditwheel repair --plat $AUDITWHEEL_PLAT -w {dest_dir} {wheel}'",
    "bash -lc 'echo \"-- repaired wheel contents --\"; unzip -l {dest_dir}/*.whl | sed -n \"1,200p\" || true'",
]


[tool.cibuildwheel.macos]
skip="pp* cp36* cp37*"
before-all = '''
#!/bin/bash
brew install wget zlib gcc
if [[ $CIBW_ARCHS == *"arm"* ]]; then
    wget https://github.com/scipopt/scipoptsuite-deploy/releases/download/v0.10.0/libscip-macos-arm.zip -O scip.zip
    export MACOSX_DEPLOYMENT_TARGET=14.0
else
    wget https://github.com/scipopt/scipoptsuite-deploy/releases/download/v0.10.0/libscip-macos-intel.zip -O scip.zip
    export MACOSX_DEPLOYMENT_TARGET=13.0
fi
unzip scip.zip
'''
environment = {PIP_NO_BINARY="pyscipopt", SCIPOPTDIR="$(pwd)/scip_install", GCGOPTDIR="$(pwd)/scip_install", LD_LIBRARY_PATH="$(pwd)/scip_install/lib:LD_LIBRARY_PATH", DYLD_LIBRARY_PATH="$(pwd)/scip_install/lib:$DYLD_LIBRARY_PATH", PATH="$(pwd)/scip_install/bin:$PATH", PKG_CONFIG_PATH="$(pwd)/scip_install/lib/pkgconfig:$PKG_CONFIG_PATH", RELEASE="true"}
repair-wheel-command = '''
    bash -c '
    if [[ $CIBW_ARCHS == *"arm"* ]]; then
        export MACOSX_DEPLOYMENT_TARGET=14.0
        delocate-listdeps {wheel}
        delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}
    else
        export MACOSX_DEPLOYMENT_TARGET=13.0
        delocate-listdeps {wheel}
        delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}
    fi
    '
'''

[tool.cibuildwheel.windows]
skip="pp* cp36* cp37*"
before-all = [
    "choco install 7zip wget",
    "wget https://github.com/scipopt/scipoptsuite-deploy/releases/download/v0.10.0/libscip-windows.zip -O scip.zip",
    "\"C:\\Program Files\\7-Zip\\7z.exe\" x \"scip.zip\" -o\"gcg-test\"",
    "mv .\\gcg-test\\scip_install .\\test",
    "mv .\\test .\\gcg"
]
before-build = "pip install delvewheel"
environment = {PIP_NO_BINARY="pyscipopt",SCIPOPTDIR='D:\\a\\PyGCGOpt\\PyGCGOpt\\gcg', GCGOPTDIR='D:\\a\\PyGCGOpt\\PyGCGOpt\\gcg', RELEASE="true" }
repair-wheel-command = "delvewheel repair --add-path c:/bin;c:/lib;c:/bin/src;c:/lib/src;D:/a/PyGCGOpt/PyGCGOpt/gcg/;D:/a/PyGCGOpt/PyGCGOpt/gcg/lib/;D:/a/PyGCGOpt/PyGCGOpt/gcg/bin/ -w {dest_dir} {wheel}"
